@@ -83,6 +83,7 @@ t/fiction/data/proto-text/with-blockquote.txt
 t/fiction/data/proto-text/with-internal-description.txt
 t/fiction/data/proto-text/with-programlisting.txt
 t/fiction/data/proto-text/with-ul-ol-li.txt
+t/fiction/data/proto-text/with-xml-lang-attribute.txt
 t/fiction/data/xml/paras-with-entities-at-start-of-line.xml
 t/fiction/data/xml/sections-a-href.xml
 t/fiction/data/xml/sections-and-paras.xml
@@ -91,6 +92,7 @@ t/fiction/data/xml/sections-p-b-i.xml
 t/fiction/data/xml/with-blockquote.xml
 t/fiction/data/xml/with-programlisting.xml
 t/fiction/data/xml/with-ul-ol-li.xml
+t/fiction/data/xml/with-xml-lang-attribute.xml
 t/fiction/proto-text-invalid.t
 t/fiction/proto-text-to-xml-using-custom-parser.t
 t/fiction/qnd-parser-unit.t
