@@ -1,5 +1,9 @@
 Revision history for XML-Grammar-Fiction.
 
+    * Add support for the lang="..." attribute of <body> in Fiction-Text which
+    would be translated to <body xml:lang=".."> attribute in Fiction-XML (and
+    eventually to DocBook 5/XML).
+
 0.6.0      Mon May 23 22:59:05 IDT 2011
     * Add the version="5.0" attribute to the top-level tag of the
     DocBook 5/XML generated by extradata/fiction-xml-to-docbook.xslt .
